# WebTorGUI

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-07-08-scaffold-linux-packaging.md  2026-07-09-windows-player-choice.md  2026-07-09-windows-webview2-login.md
docs/superpowers/specs/: 2026-07-09-windows-embedded-player-design.md  2026-07-09-windows-player-choice-design.md
packaging/: PKGBUILD  webtorapp.desktop
src/: auth.rs  browser_login.rs  browser_login_windows.rs  db.rs  lib.rs  main.rs  manual_login.rs  player.rs  player_windows.rs  settings.rs  single_instance.rs  theatre.rs  torrent.rs  torrent_engine.rs  tray.rs  tray_windows.rs  webtor_auth.rs
src/downloads/: engine.rs  mod.rs  queue.rs  scheduler.rs  torrents.rs
src/ui/: app.rs  theme.rs
