[package]
name = "webtorapp"
version = "1.0.4"
description = "Webtor Desktop - native premium client for webtor.io"
authors = ["techxero"]
license = "MIT"
edition = "2021"

[[bin]]
name = "webtorapp"
path = "src/main.rs"

[lib]
name = "webtorapp_lib"
crate-type = ["rlib"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "accesskit", "x11", "wayland"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "http"] }
egui-phosphor = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rfd = "0.15"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
rusqlite = { version = "0.31" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
uuid = { version = "1", features = ["v4"] }
open = "5"
aes-gcm = "0.10"
blake3 = "1"
machine-uid = "0.5"
base64 = "0.22"
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
cookie_store = "0.21"
librqbit = { version = "8.1.1", features = ["http-api", "tracing-subscriber-utils"] }
percent-encoding = "2.3.2"
# Needed on every platform now - both player.rs (X11) and player_windows.rs
# (Win32) get their own window's handle through this crate's traits/types.
raw-window-handle = "0.6"
# The embedded-browser login window (webkit2gtk on Linux, WebView2 on
# Windows - see src/browser_login.rs / src/browser_login_windows.rs).
# Optional so the win7 build (src/manual_login.rs) can drop them entirely:
# WebView2 has had no security updates since Jan 2023 on Windows 7, and
# tao/wry aren't verified to even build against the win7-windows-msvc
# tier-3 target. Always on by default - only the win7 CI job disables it.
tao = { version = "0.35.3", optional = true }
wry = { version = "0.55", optional = true }

[features]
default = ["embedded-login"]
embedded-login = ["dep:tao", "dep:wry"]
# Windows 7 build: no WebView2 (dead since Jan 2023), no tao/wry, no
# accesskit assumptions beyond what UI Automation has offered since Vista.
# See src/manual_login.rs and the `windows7` CI job in
# .github/workflows/build.yml. Best-effort - untested on real Windows 7
# hardware, since neither CI nor this dev environment has any.
win7 = []

[target.'cfg(not(target_os = "linux"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Backs player_windows.rs's Win32 child-window embedding (CreateWindowExW,
# SetParent, SetWindowPos, monitor bounds for native fullscreen). Pinned to
# match accesskit_windows's own `windows` requirement (a real, unconditional
# dependency of eframe's accessibility feature on Windows) - a mismatched
# version here means two distinct, mutually-incompatible `windows_core`
# crates in the graph, and the generic `Param`/`TypeKind` trait machinery
# windows-rs relies on for ergonomic argument passing breaks across that
# boundary (this is exactly what broke the first attempt at this).
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
gtk = "0.18"
ksni = { version = "0.3.5", default-features = false, features = ["async-io", "blocking"] }

[package.metadata.packager]
name = "WebtorApp"
identifier = "com.techxero.webtorapp"
description = "Native premium desktop client for webtor.io"
homepage = "https://github.com/DarkXero-dev/WebTorGUI"
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.png", "icons/icon.ico"]
out-dir = "target/release/bundle"
# mpv.exe and WebView2Loader.dll are both fetched/copied by CI
# (.github/workflows/build.yml, Windows job) and dropped at target/release/
# before this runs, for the NSIS build to place next to the installed exe.
# WebView2Loader.dll in particular is a hard runtime dependency of
# browser_login_windows.rs's login webview (see wry's raw-dylib import of
# webview2loader.dll) - without a real copy beside webtorapp.exe, Windows
# can't resolve that import and the installed app can't launch. A no-op on
# Linux/macOS builds: a resource entry that doesn't exist resolves as a glob
# with zero matches rather than an error.
resources = ["target/release/mpv.exe", "target/release/WebView2Loader.dll"]

[package.metadata.packager.deb]
desktop-template = "packaging/webtorapp.desktop"
depends = ["libwebkit2gtk-4.1-0", "libgtk-3-0", "mpv"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/webtorapp", dest = "/usr/bin/webtorapp", mode = "0755" },
    { source = "icons/icon.png", dest = "/usr/share/pixmaps/webtorapp.png", mode = "0644" },
    { source = "icons/32x32.png", dest = "/usr/share/icons/hicolor/32x32/apps/webtorapp.png", mode = "0644" },
    { source = "icons/128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/webtorapp.png", mode = "0644" },
    { source = "icons/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/webtorapp.png", mode = "0644" },
    { source = "packaging/webtorapp.desktop", dest = "/usr/share/applications/webtorapp.desktop", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
openssl-libs = "*"
mpv = "*"
"webkit2gtk4.1" = "*"
gtk3 = "*"
